<resources>
    <string name="app_name">Vision</string>
    <string name="search_images">جست و جوی تصاویر</string>
    <string name="results">نتایج</string>
    <string name="main_page">صفحه ی اصلی</string>
    <string name="settings">تنظیمات</string>
    <string name="albums">آلبوم ها</string>
    <string name="gallery">گالری</string>
    <string name="screenOption">screenOption</string>
    <string name="toolbarColor">toolbarColor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="way_of_search">روش جست و جوی تصاویر</string>
    <string name="number_of_images">تعداد نتایج جست و جو</string>
    <string name="theme">تم برنامه</string>
    <string name="id">id</string>
    <string name="prefs">prefs</string>
    <string name="first_time">first_time</string>
    <string name="show_image">مشاهده ی تصویر</string>
    <string name="search_similar_images">جست و جوی تصاویر مشابه</string>
    <string name="choose_image">انتخاب تصویر ورودی</string>
    <string name="features">ویژگی ها</string>
    <string name="settings_saved">تنظیمات ثبت شد!</string>
    <string name="constraints">مشابهت ها</string>
</resources>
